syntax = "proto3";

package gogoapi;

option go_package = "github.com/ikaiguang/protobuf_benchmarks/gogo_api;gogoapi";

import "google/protobuf/any.proto";

// Http .
message Http {
  repeated HttpRule rules = 1;

  bool fully_decode_reserved_expansion = 2;

  google.protobuf.Any any_data = 3;
}

// HttpRule .
message HttpRule {
  string selector = 1;

  oneof pattern {

    string get = 2;

    string put = 3;

    string post = 4;

    string delete = 5;

    string patch = 6;

    CustomHttpPattern custom = 8;
  }

  string body = 7;

  string response_body = 12;

  repeated HttpRule additional_bindings = 11;
}

// CustomHttpPattern .
message CustomHttpPattern {
  string kind = 1;

  string path = 2;
}
